--- a/contact-me.html
+++ b/contact-me.html
@@ -9,8 +9,8 @@
 <body>
   <h1>My Contact Details</h1>
   <ul>
-    <li>Address:181 Kennedy Dr, Apt 807, Malden, MA-02148</li>
-    <li>Phone:(781)-588-9652</li>
+    <li>Address:Malden, MA</li>
+    <li>Phone:(123)-456-7892</li>
     <li>Email:<a href="mailto:grdwarampudi@gmail.com?subject=Contact me">Contact me</a>"</li>
   </ul>
   <form action="mailto:grdwarampudi@gmail.com" method="post" enctype="text/plain">
