--- a/contact-me.html
+++ b/contact-me.html
@@ -9,11 +9,10 @@
 <body>
   <h1>My Contact Details</h1>
   <ul>
-    <li>Address:Malden, MA</li>
     <li>Phone:(123)-456-7892</li>
-    <li>Email:<a href="mailto:grdwarampudi@gmail.com?subject=Contact me">Contact me</a>"</li>
+    <li>Email:<a href="mailto:example@example.com?subject=Contact me">Contact me</a>"</li>
   </ul>
-  <form action="mailto:grdwarampudi@gmail.com" method="post" enctype="text/plain">
+  <form action="mailto:example@example.com" method="post" enctype="text/plain">
     <label>Your Name: </label>
     <input type="text" name="Name" value="">
   <br />
